--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "json-server -p 3006 --watch db.json"
+    "serve": "json-server -p 3006 --watch db.json",
+    "dev": "concurrently \"npm start\" \"npm run serve\""
   },
   "eslintConfig": {
     "extends": [
